--- a/resume.tex
+++ b/resume.tex
@@ -59,15 +59,15 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{profile}
-\name{Junhao}{Dong}
-\position{Software Engineer}
+\name{Sirjan}{Sapkota}
+\position{Graduate Research Assistant | PhD Candidate}
 % \address{address}
 
-\mobile{(678) 343-1817}
-\email{junhao.dong96@gmail.com}
+\mobile{(706) 351-0302}
+\email{sirjan.sapkota@yahoo.com}
 % \homepage{homepage}
-\github{junhaodong}
-\linkedin{junhaodong}
+\github{sirjansapkota}
+\linkedin{sirjan-sapkota-09787049}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
